# card_game

./: .env  .env.example  .gitignore  Cargo.toml  README.md  converter.lua  engine.lua  get_db_structure.sh  watch_cards.sh
.github/: dependabot.yml
.github/workflows/: CI.yml
cards/: heal.lua  simple_rune.lua
client/: Cargo.toml  README.md
client/src/: client.rs  image_loader.rs  main.rs
client/src/animations/: mod.rs
client/src/screen_parts/: mod.rs
client/src/screens/: battle.rs  battle_animation.rs  battle_over.rs  char_select.rs  dungeon.rs  login.rs  mod.rs  screen.rs
client/static/: default_server.example.txt
database/: schema.sql
godot_client/: Control.tscn  Godot Client.csproj  Godot Client.sln  bla.cs  project.godot
godot_client/fsharp/card_gamefs/: ArenaFs.fs  BasicClient.fs  ControlFs.fs  DungeonCardContainerFs.fs  DungeonFs.fs  DungeonTilesFs.fs  HandContainerFs.fs  LoginScreenFs.fs  PlayerDungeonFs.fs  RuneContainerFs.fs  SceneControllerFs.fs  SignalAwaiter.fs  basicClient.fs  blaFs.fs  card_gamefs.fsproj  character_selectFs.fs  globals.fs  newBasicClient.fs  poll.fs  testFs.fs
godot_client/fsharp/card_gamefs/schemas/: LoginData.schema.fs  LoginReply.schema.fs
godot_client/src/: Arena.cs  Arena.tscn  Control.cs  Control.tscn  Dungeon.cs  Dungeon.tscn  DungeonCardContainer.cs  DungeonTiles.cs  HandContainer.cs  LoginScreen.cs  PlayerDungeon.cs  RuneContainer.cs  SceneController.cs  character_select.cs  character_select.tscn  test.cs
lua/: compiler.lua  converter.lua  engine.lua
lua/cards/: damage_over_time.lua  heal.lua  simple_rune.lua  test_damage.lua  test_hexa_rune.lua
lua/compiler/: constants.lua  envReader.lua  fileSystem.lua  imageCreator.lua  processor.lua  saver.lua  sql.lua
lua/engine/: battle.lua  constants.lua  math.lua  runes.lua  turn.lua
lua/hexa_runes/: damage_buff.lua  test.lua
lua/small_runes/: damage.lua  damage_over_time.lua
server/: .env.example  Cargo.toml  README.md  make_test_user.sh  sqlx-data.json  tlconfig.lua  watch_server.sh
server/lua/: compiler.lua  compiler.tl  engine.lua  engine.tl  preload.lua  teal.lua
server/lua/cards/: damage_over_time.lua  damage_over_time.tl  heal.lua  heal.tl  simple_rune.lua  simple_rune.tl  test_damage.lua  test_damage.tl  test_hexa_rune.lua  test_hexa_rune.tl
server/lua/compiled/cards/: damage_over_time.lua  heal.lua  simple_rune.lua  test_damage.lua  test_hexa_rune.lua
server/lua/compiled/hexa_runes/code/: damage_buff.lua  test.lua
server/lua/compiled/hexa_runes/config/: test.lua
server/lua/compiled/small_runes/code/: damage.lua  damage_over_time.lua  healing.lua  speed.lua
server/lua/compiler/: constants.lua  constants.tl  envReader.tl  fileSystem.lua  fileSystem.tl  imageCreator.lua  imageCreator.tl  processor.tl  saver.lua  saver.tl  sql.lua  sql.tl
server/lua/engine/: battle.tl  math.tl  runes.lua  runes.tl  turn.lua  turn.tl
server/lua/hexa_runes/: damage_buff.lua  damage_buff.tl  test.tl
server/lua/small_runes/: damage.tl  damage_over_time.lua  damage_over_time.tl  healing.lua  healing.tl  speed.lua  speed.tl
server/lua/types/: Card.d.tl  Rust.d.tl  all.d.tl  json.d.tl  lfs.d.tl  rune.d.tl  runeWrapper.d.tl  teal.d.tl  test.d.tl
server/lua/types/luasql/: postgres.d.tl
server/migrations/: 20200816112700_initial_schema.sql  20200816121046_update_database_types.sql  20210522150041_add_events.sql
server/src/: dungeon.rs  errors.rs  lib.rs  main.rs  util.rs
server/src/battle/: battle_move.rs  card.rs  deck.rs  field.rs  mod.rs  player.rs  runes.rs
server/src/controllers/: battle.rs  characters.rs  dungeon.rs  mod.rs  users.rs
server/src/dungeon/: dungeon.rs  tile.rs
shared/: Cargo.toml  README.md
shared/src/: battle.rs  battle_log.rs  characters.rs  dungeon.rs  funcs.rs  image_map.rs  lib.rs  main.rs  users.rs
small_runes/: damage.lua
src/: battle.rs  client.rs  errors.rs  lib.rs  main.rs  responses.rs  users.rs  util.rs
src/animations/: hexa_runes_rotation.rs
src/battle/: battle.rs  card.rs  deck.rs  field.rs  mod.rs  player.rs  runes.rs
src/controllers/: battle.rs  characters.rs  mod.rs  users.rs
src/screen_parts/: hand.rs
src/screens/: battle.rs  char_select.rs  login.rs  mod.rs  screen.rs
