[package]
name = "card_game"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros"] }
warp = "*"
sqlx = { version = "*", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
dotenv = "*"
futures = "*"
serde = {version="1.0", features=["derive"]}
serde_json = "*"
argonautica = "*"
rand_core="*"
rand = "*"
sha2 = "*"
base64 = "*"
http = "0.2.0"
rlua = "*"
card_game_shared = {git="https://github.com/lenscas/card_game_shared.git"}