[package]
name = "card_game_client"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick_surf = {git="https://github.com/lenscas/quick_surf.git"}
card_game_shared = {path="../card_game_shared"}
serde = {version="1.0",  features = ["derive"]}
serde_json =  "1.0"
mergui = {path="../mergui"}
quicksilver= {git="https://github.com/ryanisaacg/quicksilver.git", branch="add-font-support", features=["stdweb"]}
async-trait = "*"