[package]
name = "card_game_client"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silver_surf =  {version="0.1.2",features =["std-web"]}
card_game_shared = {path="../card_game_shared"}
serde = {version="1.0",  features = ["derive"]}
serde_json =  "1.0"
mergui = "0.1.0-alpha.1"
quicksilver= {version="0.4.0-alpha0.3", features=["stdweb"]}
async-trait = "*"