[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
name = "card_game"
version = "0.1.0"

[[bin]]
bench = false
name = "teal_generator"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "*"
base64 = "*"
card_game_shared = {path = "../shared", features = ["server"]}
dotenv = "*"
futures = "*"
http = "0.2.0"
pretty_env_logger = "*"
rand = "*"
rand_core = "*"
rlua = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
sha2 = "*"
sqlx = {version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "offline", "json"]}
tealr = {version = "0.3.1"}
tokio = {version = "0.2", features = ["macros", "fs", "stream"]}
warp = "0.2.5"
#card_game_shared = {path="../card_game_shared", features=["server"]}
image = "*"
sheep = "*"
[profile.dev.package."*"]
opt-level = 3
