[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
name = "card_game"
version = "0.1.0"

[[bin]]
bench = false
name = "teal_generator"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "*"
base64 = "*"
card_game_shared = {path = "../shared", features = ["server"]}
dotenv = "*"
futures = "*"
http = "0.2.0"
image = {version = "*", default-features = false, features = ["png"]}
pretty_env_logger = "*"
rand = "*"
rand_core = "*"
rlua = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
sha2 = "*"
sheep = {version = "*", default-features = false}
sqlx = {version = "0.4.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "offline", "json"]}
tealr = {version = "0.4.1", default-features = false, features = ["derive", "embed_compiler_from_local"]}
tokio = {version = "0.2", features = ["macros", "fs", "stream"]}
warp = {version = "0.2.5", default-features = false}

[profile.dev.package."*"]
opt-level = 3
