[package]
name = "card_game_shared"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["rlua","tealr"]
client = ["quicksilver"]

[dependencies]
serde = {version = "1.0", features=["derive"]}
rlua = {version="*", optional = true}
tealr = {version = "0.2.0",git = "https://github.com/lenscas/tealr", optional =true}
quicksilver = {version="0.4.0-alpha0.6", features = ["serde"], default-features = false, optional = true}
