[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
name = "card_game_shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["quicksilver"]
server = ["rlua", "tealr"]

[dependencies]
quicksilver = {version = "0.4.0-alpha0.6", features = ["serde"], default-features = false, optional = true}
rlua = {version = "*", optional = true}
schemars = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
sheep = "*"
tealr = {version = "0.3.1", optional = true, default-features = false, features = ["derive"]}
type_gen = {path = "../../type_gen", git = "https://github.com/lenscas/type_generator"}
